--- a/Cupcake/src/main/resources/templates/galleri.html
+++ b/Cupcake/src/main/resources/templates/galleri.html
@@ -74,12 +74,12 @@
                     <!-- Grid Showcase Start -->
                     <div class="gallery-grid">
                         <div class="gallery-item gallery-item--extreme guac-animate guac-fade-slide-up">
-                            <img src="/images/gallery/birthday.png" alt="Fødselsdags Cupcake" class="gallery-item__img">
+                            <img src="/images/gallery/cupcake-gallery-7.png" alt="Fødselsdags Cupcake" class="gallery-item__img">
                             <button class="heart-btn">
                                 <i class="fa-regular fa-heart"></i>
                             </button>
                             <div class="gallery-item__details">
-                                Fødselsdags Cupcake - denne gav vi til Jonas og hans boyfriend på deres fødselsdag!
+                                Fødselsdags Cupcake - denne gav vi til Jonas på hans fødselsdag!
                                 
                                 <!-- Likes and Comments -->
                                 <div class="gallery-item__lac">
@@ -91,12 +91,12 @@
                             </div>
                         </div>
                         <div class="gallery-item gallery-item--large guac-animate guac-fade-slide-up">
-                            <img src="/images/gallery/pride.png" alt="Fødselsdags Cupcake" class="gallery-item__img">
+                            <img src="/images/gallery/cupcake-gallery-1.png" alt="Fødselsdags Cupcake" class="gallery-item__img">
                             <button class="heart-btn">
                                 <i class="fa-regular fa-heart"></i>
                             </button>
                             <div class="gallery-item__details">
-                                Fejring af Jødisk Kulturfestival - Andreas stod for at lave regnbuecupcakes til fejringen!
+                                Wow. Se vores nyeste opslag her!
 
                                 <!-- Likes and Comments -->
                                 <div class="gallery-item__lac">
@@ -108,12 +108,12 @@
                             </div>
                         </div>
                         <div class="gallery-item gallery-item--medium guac-animate guac-fade-slide-up">
-                            <img src="/images/gallery/nice.png" alt="Fødselsdags Cupcake" class="gallery-item__img">
+                            <img src="/images/gallery/cupcake-gallery-6.png" alt="Fødselsdags Cupcake" class="gallery-item__img">
                             <button class="heart-btn">
                                 <i class="fa-regular fa-heart"></i>
                             </button>
                             <div class="gallery-item__details">
-                                Lækker jordbær LOL
+                                Lækker jordbærcupcake. Følg os for at få opskriften.
 
                                 <!-- Likes and Comments -->
                                 <div class="gallery-item__lac">
@@ -125,12 +125,12 @@
                             </div>
                         </div>
                         <div class="gallery-item gallery-item--large guac-animate guac-fade-slide-up">
-                            <img src="/images/gallery/andreas.png" alt="Fødselsdags Cupcake" class="gallery-item__img">
+                            <img src="/images/gallery/cupcake-gallery-8.png" alt="Fødselsdags Cupcake" class="gallery-item__img">
                             <button class="heart-btn">
                                 <i class="fa-regular fa-heart"></i>
                             </button>
                             <div class="gallery-item__details">
-                                Andreas Special
+                                Andreas' special cupcake. Chokolade og ekstra kærlighed.
 
                                 <!-- Likes and Comments -->
                                 <div class="gallery-item__lac">
@@ -142,12 +142,12 @@
                             </div>
                         </div>
                         <div class="gallery-item gallery-item--half guac-animate guac-fade-slide-up">
-                            <img src="/images/gallery/jonasmonster.png" alt="Fødselsdags Cupcake" class="gallery-item__img">
+                            <img src="/images/gallery/cupcake-gallery-4.png" alt="Fødselsdags Cupcake" class="gallery-item__img">
                             <button class="heart-btn">
                                 <i class="fa-regular fa-heart"></i>
                             </button>
                             <div class="gallery-item__details">
-                                Ebou's Favorit
+                                Ebou's Favorit cupcake!
 
                                 <!-- Likes and Comments -->
                                 <div class="gallery-item__lac">
@@ -159,12 +159,12 @@
                             </div>
                         </div>
                         <div class="gallery-item gallery-item--medium guac-animate guac-fade-slide-up">
-                            <img src="/images/gallery/jew.png" alt="Fødselsdags Cupcake" class="gallery-item__img">
+                            <img src="/images/gallery/cupcake-gallery-2.png" alt="Fødselsdags Cupcake" class="gallery-item__img">
                             <button class="heart-btn">
                                 <i class="fa-regular fa-heart"></i>
                             </button>
                             <div class="gallery-item__details">
-                                Blåbær muffins med et twist af LGTBQ+ krymmel! We don't discriminate.
+                                Blåbær muffins med et twist af blåt krymmel og lækre variationer.
 
                                 <!-- Likes and Comments -->
                                 <div class="gallery-item__lac">
@@ -176,12 +176,12 @@
                             </div>
                         </div>
                         <div class="gallery-item gallery-item--large guac-animate guac-fade-slide-up">
-                            <img src="/images/gallery/ebou.png" alt="Fødselsdags Cupcake" class="gallery-item__img">
+                            <img src="/images/gallery/cupcake-gallery-5.png" alt="Fødselsdags Cupcake" class="gallery-item__img">
                             <button class="heart-btn">
                                 <i class="fa-regular fa-heart"></i>
                             </button>
                             <div class="gallery-item__details">
-                                Olskers Special Cookie Monster cupcakes, som vores elskede Jonas fik spist et par af!
+                                Olskers Special Cookie Monster cupcakes.
 
                                 <!-- Likes and Comments -->
                                 <div class="gallery-item__lac">
@@ -193,7 +193,7 @@
                             </div>
                         </div>
                         <div class="gallery-item guac-animate guac-fade-slide-up">
-                            <img src="/images/gallery/shit.png" alt="Fødselsdags Cupcake" class="gallery-item__img">
+                            <img src="/images/gallery/cupcake-gallery-3.png" alt="Fødselsdags Cupcake" class="gallery-item__img">
                             <button class="heart-btn">
                                 <i class="fa-regular fa-heart"></i>
                             </button>
@@ -210,7 +210,7 @@
                             </div>
                         </div>
                         <div class="gallery-item gallery-item--medium guac-animate guac-fade-slide-up">
-                            <img src="/images/gallery/pride.png" alt="Fødselsdags Cupcake" class="gallery-item__img">
+                            <img src="/images/gallery/cupcake-gallery-1.png" alt="Fødselsdags Cupcake" class="gallery-item__img">
                             <button class="heart-btn">
                                 <i class="fa-regular fa-heart"></i>
                             </button>
@@ -227,7 +227,7 @@
                             </div>
                         </div>
                         <div class="gallery-item guac-animate guac-fade-slide-up">
-                            <img src="/images/gallery/ebou.png" alt="Fødselsdags Cupcake" class="gallery-item__img">
+                            <img src="/images/gallery/cupcake-gallery-5.png" alt="Fødselsdags Cupcake" class="gallery-item__img">
                             <button class="heart-btn">
                                 <i class="fa-regular fa-heart"></i>
                             </button>
