--- a/Cupcake/src/main/resources/templates/index.html
+++ b/Cupcake/src/main/resources/templates/index.html
@@ -45,6 +45,8 @@
 
             Without defer it would read top to bottom. Stop at the script -> load the script ->
             load the rest of the page. Resulting in unwanted slow speed. Bad practice in general.
+
+            Use with causing and apply to correct .js files only.
     -->
 
 </head>
