--- a/Cupcake/src/main/resources/templates/payment.html
+++ b/Cupcake/src/main/resources/templates/payment.html
@@ -16,6 +16,9 @@
     <link rel="icon" href="/images/icons/cupcake-1.png" type="image/x-icon"> <!-- That little logo thats next to the title in URL -->
     <link rel="apple-touch-icon" href="/images/icons/cupcake-1.png">
 
+    <!-- Font Awesome Load -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
     <!-- CSS Load -->
     <link rel="stylesheet" href="/css/style.css">
 
@@ -34,7 +37,7 @@
 <body class="subpage">
 
     <!-- Return to Index -->
-    <a href="/" class="exit-btn" title="Tilbage til forsiden">&#10006;</a>
+    <a href="/order" class="exit-btn" title="Tilbage til order"><i class="fa fa-arrow-left"></i></a>
     <!-- Return to Index -->
 
     <!-- Payment Section Start -->
