Mange fixes af bugs, unused code og optimering

--- a/Cupcake/src/main/resources/templates/tak-order.html
+++ b/Cupcake/src/main/resources/templates/tak-order.html
@@ -17,7 +17,7 @@
     <link rel="apple-touch-icon" href="../images/icons/cupcake-1.png">
 
     <!-- Script Load -->
-    <script src="js/blocker.js"></script>
+    <!--<script src="js/blocker.js"></script> -->
 
     <!-- CSS Load -->
     <link rel="stylesheet" href="../css/style.css">
